@@ -1,6 +1,7 @@
 use warnings;
 use strict;
-use Test::More tests => 28;
+use Test::More;
+use Test::Exception;
 use lib 't/local';
 use LocalServer;
 
@@ -60,3 +61,6 @@ is( $agent->uri, $server->url, 'Needs to be on the same page' );
 eval {$agent->follow_link( '/foo' )};
 like($@, qr/Needs to get key-value pairs of parameters.*follow\.t/, "Invalid parameter passing gets better error message");
 
+dies_ok { WWW::Mechanize->new->follow_link( url => '/404' ) } "dies when link does not exist with autocheck";
+
+done_testing;
